# mode-choice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.docker.txt
app/: Home.py
app/pages/: 1_Substitution_Response.py  2_Population_Pricing.py  3_User_Pricing.py
artifacts/: eval_summary.csv
artifacts/modechoice_bundle/: meta.json
artifacts/substitution_tables/: curve_air.csv  curve_bus.csv  curve_car.csv  curve_train.csv
notebooks/: 01_eda_and_training.ipynb  02_pricing_population.ipynb  03_pricing_user.ipynb  04_substitution_curves.ipynb
runtime_assets/modechoice_bundle/: model.pt  scaler.json
src/modechoice/: __init__.py  config.py  data.py  elasticity.py  eval.py  features.py  io.py  model.py  pipeline.py  pricing_population.py  pricing_user.py  tensors.py  train.py
src/modechoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
