[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modechoice"
version = "0.1.0"
description = "Nested logit (heterogeneous) mode choice model + dynamic pricing tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Aini Nur Zahiyah Maulani" }
]
keywords = ["discrete-choice", "nested-logit", "mode-choice", "pricing", "torch", "mlflow", "streamlit"]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "torch>=2.1",
  "tqdm>=4.66",
  "joblib>=1.3",
  "mlflow>=2.10",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.25",
  "jupyter>=1.0",
  "notebook>=7.0",
  "jupyterlab>=4.0",
  "black>=24.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8.0",
]

pricing = [
  "optuna>=3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]